--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
 # C extensions
 *.so
 
@@ -60,6 +61,10 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
+
 
 # Flask stuff:
 instance/
