--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 Django==5.0.6
 django-cors-headers==4.4.0
+django-docs==0.3.3
 django-guest-user==0.5.5
 djangorestframework==3.15.2
-docutils==0.21.2
+docutils==0.20.1
 idna==3.7
 imagesize==1.4.1
 Jinja2==3.1.4
@@ -18,9 +19,11 @@ Pygments==2.18.0
 requests==2.32.3
 snowballstemmer==2.2.0
 Sphinx==7.3.7
+sphinx-rtd-theme==2.0.0
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
